contrast corrected in pumpkin

--- a/week01/styles/chamber-site.css
+++ b/week01/styles/chamber-site.css
@@ -23,7 +23,7 @@ h2{
 }
 .accent1{
     background-color: #FF6700;
-    color: white;
+    color: black;
 }
 .accent2{
     background-color: #EBEBEB;
@@ -32,7 +32,7 @@ h2{
     font-family: 'Trirong', serif;
     font-style: italic;
     background-color: #FF6700;
-    color: white;
+    color: black;
     font-size: 30px;
 }
 .sample2{
